--- a/thundermans/index.html
+++ b/thundermans/index.html
@@ -3,97 +3,107 @@
     <title>Thundermans - Tu Tienda de Comics</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Descubre los mejores comics en Thundermans. ¡Únete a nuestra comunidad de fanáticos!">
+    <meta name="description" content="Descubre el emocionante mundo de los comics en Thundermans. Encuentra tus títulos favoritos y disfruta de una experiencia única.">
     <meta property="og:title" content="Thundermans - Tu Tienda de Comics">
-    <meta property="og:description" content="Encuentra tus comics favoritos y más en Thundermans.">
+    <meta property="og:description" content="Explora una amplia variedad de comics y sumérgete en historias increíbles.">
     <meta property="og:image" content="placeholder.jpg">
     <meta property="og:url" content="https://thundermans.com">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Thundermans - Tu Tienda de Comics">
-    <meta name="twitter:description" content="Explora nuestra colección de comics.">
+    <meta name="twitter:description" content="Encuentra tus comics favoritos en Thundermans.">
+    <meta name="twitter:image" content="placeholder.jpg">
     <link rel="icon" href="favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     
 
   <link rel="stylesheet" href="styles.css" /></head>
-<body class="bg-white">
+<body class="bg-bg-soft">
     <header class="sticky top-0 z-50 bg-white shadow-md">
         <nav class="flex justify-between items-center p-4">
-            <div class="text-2xl font-bold text-gray-800">Thundermans</div>
-            <button id="menu-toggle" class="md:hidden focus:outline-none">☰</button>
-            <ul id="menu" class="hidden md:flex space-x-4">
-                <li><a href="#hero" class="text-gray-800">Inicio</a></li>
-                <li><a href="#productos" class="text-gray-800">Comics</a></li>
-                <li><a href="#contacto" class="text-gray-800">Contacto</a></li>
-                <li><a href="#faq" class="text-gray-800">FAQ</a></li>
-            </ul>
+            <div class="text-2xl font-bold text-color-primary">Thundermans</div>
+            <div class="hidden md:flex space-x-4">
+                <a href="#hero" class="text-color-secondary">Inicio</a>
+                <a href="#productos" class="text-color-secondary">Productos</a>
+                <a href="#contacto" class="text-color-secondary">Contacto</a>
+            </div>
+            <button id="menu-toggle" class="md:hidden text-color-primary">☰</button>
         </nav>
+        <div id="mobile-menu" class="hidden flex-col md:hidden bg-white shadow-md">
+            <a href="#hero" class="p-2">Inicio</a>
+            <a href="#productos" class="p-2">Productos</a>
+            <a href="#contacto" class="p-2">Contacto</a>
+        </div>
     </header>
-    <section id="hero" class="hero flex items-center justify-center text-white h-[80vh]">
-        <div class="text-center">
+
+    <section id="hero" class="hero flex items-center justify-center h-screen text-white text-center">
+        <div class="p-8">
             <h1 class="text-5xl font-bold">¡Bienvenido a Thundermans!</h1>
-            <p class="mt-4 text-xl">Tu destino para los mejores comics.</p>
+            <p class="mt-4 text-xl">Tu destino para los mejores comics del mundo.</p>
             <div class="mt-6">
-                <a href="#productos" class="bg-white text-gray-800 px-4 py-2 rounded-full">Ver Comics</a>
-                <a href="#contacto" class="bg-transparent border border-white text-white px-4 py-2 rounded-full ml-4">Contáctanos</a>
+                <a href="#productos" class="bg-white text-color-primary py-2 px-4 rounded-lg shadow-lg">Explorar Comics</a>
+                <a href="#contacto" class="ml-4 bg-transparent border-2 border-white py-2 px-4 rounded-lg">Contáctanos</a>
             </div>
         </div>
     </section>
+
     <section id="productos" class="p-8">
-        <h2 class="text-3xl font-bold text-center">Nuestros Comics</h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-6">
+        <h2 class="text-3xl font-bold text-center mb-6">Nuestros Comics</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
             <div class="card p-4 bg-white rounded-lg">
-                <h3 class="font-semibold">Comic A</h3>
-                <p>Descripción breve del Comic A.</p>
-                <span class="bg-gray-200 px-2 py-1 rounded-full">Aventura</span>
+                <h3 class="font-semibold">Comic 1</h3>
+                <p>Descripción breve del comic 1.</p>
+                <span class="bg-color-primary text-white rounded-full px-2">Nuevo</span>
             </div>
             <div class="card p-4 bg-white rounded-lg">
-                <h3 class="font-semibold">Comic B</h3>
-                <p>Descripción breve del Comic B.</p>
-                <span class="bg-gray-200 px-2 py-1 rounded-full">Acción</span>
+                <h3 class="font-semibold">Comic 2</h3>
+                <p>Descripción breve del comic 2.</p>
+                <span class="bg-color-primary text-white rounded-full px-2">Popular</span>
             </div>
             <div class="card p-4 bg-white rounded-lg">
-                <h3 class="font-semibold">Comic C</h3>
-                <p>Descripción breve del Comic C.</p>
-                <span class="bg-gray-200 px-2 py-1 rounded-full">Comedia</span>
+                <h3 class="font-semibold">Comic 3</h3>
+                <p>Descripción breve del comic 3.</p>
+                <span class="bg-color-primary text-white rounded-full px-2">Recomendado</span>
             </div>
         </div>
     </section>
-    <section id="contacto" class="p-8 bg-gray-100">
-        <h2 class="text-3xl font-bold text-center">Contáctanos</h2>
-        <form id="contact-form" class="mt-6 max-w-lg mx-auto">
-            <label for="nombre" class="block">Nombre:</label>
-            <input type="text" id="nombre" required class="w-full p-2 border rounded">
-            <label for="email" class="block mt-4">Email:</label>
-            <input type="email" id="email" required class="w-full p-2 border rounded">
-            <label for="mensaje" class="block mt-4">Mensaje:</label>
-            <textarea id="mensaje" required class="w-full p-2 border rounded"></textarea>
-            <button type="submit" class="mt-4 bg-blue-500 text-white px-4 py-2 rounded">Enviar</button>
-            <div id="form-message" class="mt-4 text-green-500 hidden">¡Mensaje enviado con éxito!</div>
+
+    <section class="bg-gray-100 p-8">
+        <h2 class="text-3xl font-bold text-center mb-6">Testimonios</h2>
+        <p class="text-center">"Los mejores comics que he leído!" - Cliente Feliz</p>
+    </section>
+
+    <section id="contacto" class="p-8">
+        <h2 class="text-3xl font-bold text-center mb-6">Contáctanos</h2>
+        <form id="contact-form" class="max-w-md mx-auto">
+            <div class="mb-4">
+                <label for="nombre" class="block text-gray-700">Nombre</label>
+                <input type="text" id="nombre" required class="border rounded-lg w-full p-2">
+            </div>
+            <div class="mb-4">
+                <label for="email" class="block text-gray-700">Email</label>
+                <input type="email" id="email" required class="border rounded-lg w-full p-2">
+            </div>
+            <div class="mb-4">
+                <label for="mensaje" class="block text-gray-700">Mensaje</label>
+                <textarea id="mensaje" required class="border rounded-lg w-full p-2"></textarea>
+            </div>
+            <button type="submit" class="bg-color-primary text-white py-2 px-4 rounded-lg">Enviar</button>
+            <div id="form-message" class="mt-4 text-center"></div>
         </form>
     </section>
-    <section id="faq" class="p-8">
-        <h2 class="text-3xl font-bold text-center">Preguntas Frecuentes</h2>
-        <div class="accordion mt-6">
-            <div>
-                <button class="w-full text-left p-4 border-b" onclick="toggleAccordion(this)">¿Cómo puedo comprar un comic?</button>
-                <div class="hidden p-4">Puedes comprar comics directamente en nuestra tienda.</div>
-            </div>
-            <div>
-                <button class="w-full text-left p-4 border-b" onclick="toggleAccordion(this)">¿Hacen envíos?</button>
-                <div class="hidden p-4">Sí, hacemos envíos a todo el país.</div>
-            </div>
-        </div>
-    </section>
-    <footer class="p-4 bg-gray-800 text-white">
-        <div class="flex justify-between">
-            <div>© 2023 Thundermans</div>
-            <div class="flex space-x-4">
+
+    <footer class="bg-gray-800 text-white p-4">
+        <div class="text-center">
+            <p>&copy; 2023 Thundermans. Todos los derechos reservados.</p>
+            <div class="flex justify-center space-x-4">
                 <a href="#" class="text-white">Facebook</a>
+                <a href="#" class="text-white">Twitter</a>
                 <a href="#" class="text-white">Instagram</a>
             </div>
+            <a href="#hero" class="text-white mt-4 block">Volver arriba</a>
         </div>
     </footer>
+
     
 
   <!-- Chatwoot -->
