--- a/thundermans/index.html
+++ b/thundermans/index.html
@@ -1,109 +1,86 @@
 <html lang="es">
 <head>
-    <title>Thundermans - Tu Tienda de Comics</title>
+    <title>Thundermans - Tu tienda de cómics</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Descubre el emocionante mundo de los comics en Thundermans. Encuentra tus títulos favoritos y disfruta de una experiencia única.">
-    <meta property="og:title" content="Thundermans - Tu Tienda de Comics">
-    <meta property="og:description" content="Explora una amplia variedad de comics y sumérgete en historias increíbles.">
+    <meta name="description" content="Descubre el fascinante mundo de Thundermans, tu tienda de cómics favorita. Encuentra los mejores títulos y sumérgete en historias increíbles.">
+    <meta property="og:title" content="Thundermans - Tu tienda de cómics">
+    <meta property="og:description" content="Explora nuestra amplia colección de cómics y disfruta de promociones exclusivas.">
     <meta property="og:image" content="placeholder.jpg">
     <meta property="og:url" content="https://thundermans.com">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Thundermans - Tu Tienda de Comics">
-    <meta name="twitter:description" content="Encuentra tus comics favoritos en Thundermans.">
-    <meta name="twitter:image" content="placeholder.jpg">
-    <link rel="icon" href="favicon.ico">
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <meta name="twitter:title" content="Thundermans - Tu tienda de cómics">
+    <meta name="twitter:description" content="Encuentra tus cómics favoritos en Thundermans.">
+    <link rel="icon" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUA...">
+    <script src="https://cdn.tailwindcss.com"></script>
     
 
   <link rel="stylesheet" href="styles.css" /></head>
-<body class="bg-bg-soft">
-    <header class="sticky top-0 z-50 bg-white shadow-md">
+<body class="flex flex-col">
+    <header class="sticky top-0 bg-white shadow-md">
         <nav class="flex justify-between items-center p-4">
             <div class="text-2xl font-bold text-color-primary">Thundermans</div>
-            <div class="hidden md:flex space-x-4">
-                <a href="#hero" class="text-color-secondary">Inicio</a>
-                <a href="#productos" class="text-color-secondary">Productos</a>
-                <a href="#contacto" class="text-color-secondary">Contacto</a>
-            </div>
-            <button id="menu-toggle" class="md:hidden text-color-primary">☰</button>
+            <button id="menu-toggle" class="md:hidden p-2">☰</button>
+            <ul id="menu" class="hidden md:flex space-x-4">
+                <li><a href="#hero" class="text-color-primary">Inicio</a></li>
+                <li><a href="#productos" class="text-color-primary">Productos</a></li>
+                <li><a href="#contacto" class="text-color-primary">Contacto</a></li>
+            </ul>
         </nav>
-        <div id="mobile-menu" class="hidden flex-col md:hidden bg-white shadow-md">
-            <a href="#hero" class="p-2">Inicio</a>
-            <a href="#productos" class="p-2">Productos</a>
-            <a href="#contacto" class="p-2">Contacto</a>
-        </div>
     </header>
-
-    <section id="hero" class="hero flex items-center justify-center h-screen text-white text-center">
-        <div class="p-8">
-            <h1 class="text-5xl font-bold">¡Bienvenido a Thundermans!</h1>
-            <p class="mt-4 text-xl">Tu destino para los mejores comics del mundo.</p>
-            <div class="mt-6">
-                <a href="#productos" class="bg-white text-color-primary py-2 px-4 rounded-lg shadow-lg">Explorar Comics</a>
-                <a href="#contacto" class="ml-4 bg-transparent border-2 border-white py-2 px-4 rounded-lg">Contáctanos</a>
-            </div>
+    <section id="hero" class="flex flex-col items-center justify-center h-screen bg-gradient-to-r from-blue-500 to-purple-600 text-white text-center">
+        <h1 class="text-5xl font-extrabold">¡Bienvenido a Thundermans!</h1>
+        <p class="mt-4 text-lg">Tu tienda de cómics favorita, donde las historias cobran vida.</p>
+        <div class="mt-6">
+            <a href="#productos" class="btn-primary">Explorar cómics</a>
+            <a href="#contacto" class="btn-secondary">Contáctanos</a>
         </div>
     </section>
-
     <section id="productos" class="p-8">
-        <h2 class="text-3xl font-bold text-center mb-6">Nuestros Comics</h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-            <div class="card p-4 bg-white rounded-lg">
-                <h3 class="font-semibold">Comic 1</h3>
-                <p>Descripción breve del comic 1.</p>
-                <span class="bg-color-primary text-white rounded-full px-2">Nuevo</span>
+        <h2 class="text-3xl font-bold text-center">Nuestros Productos</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-6">
+            <div class="bg-white rounded-lg shadow-lg p-4">
+                <h3 class="font-bold">Cómic A</h3>
+                <p>Descripción breve del cómic A.</p>
+                <span class="bg-yellow-200 text-yellow-800 rounded-full px-2 py-1 text-xs">Nuevo</span>
             </div>
-            <div class="card p-4 bg-white rounded-lg">
-                <h3 class="font-semibold">Comic 2</h3>
-                <p>Descripción breve del comic 2.</p>
-                <span class="bg-color-primary text-white rounded-full px-2">Popular</span>
+            <div class="bg-white rounded-lg shadow-lg p-4">
+                <h3 class="font-bold">Cómic B</h3>
+                <p>Descripción breve del cómic B.</p>
+                <span class="bg-yellow-200 text-yellow-800 rounded-full px-2 py-1 text-xs">Popular</span>
             </div>
-            <div class="card p-4 bg-white rounded-lg">
-                <h3 class="font-semibold">Comic 3</h3>
-                <p>Descripción breve del comic 3.</p>
-                <span class="bg-color-primary text-white rounded-full px-2">Recomendado</span>
+            <div class="bg-white rounded-lg shadow-lg p-4">
+                <h3 class="font-bold">Cómic C</h3>
+                <p>Descripción breve del cómic C.</p>
+                <span class="bg-yellow-200 text-yellow-800 rounded-full px-2 py-1 text-xs">Recomendado</span>
             </div>
         </div>
     </section>
-
     <section class="bg-gray-100 p-8">
-        <h2 class="text-3xl font-bold text-center mb-6">Testimonios</h2>
-        <p class="text-center">"Los mejores comics que he leído!" - Cliente Feliz</p>
+        <h2 class="text-3xl font-bold text-center">Testimonios</h2>
+        <div class="mt-6">
+            <blockquote class="text-center italic">"Los cómics de Thundermans son los mejores!" - Cliente Satisfecho</blockquote>
+        </div>
     </section>
-
     <section id="contacto" class="p-8">
-        <h2 class="text-3xl font-bold text-center mb-6">Contáctanos</h2>
-        <form id="contact-form" class="max-w-md mx-auto">
-            <div class="mb-4">
-                <label for="nombre" class="block text-gray-700">Nombre</label>
-                <input type="text" id="nombre" required class="border rounded-lg w-full p-2">
-            </div>
-            <div class="mb-4">
-                <label for="email" class="block text-gray-700">Email</label>
-                <input type="email" id="email" required class="border rounded-lg w-full p-2">
-            </div>
-            <div class="mb-4">
-                <label for="mensaje" class="block text-gray-700">Mensaje</label>
-                <textarea id="mensaje" required class="border rounded-lg w-full p-2"></textarea>
-            </div>
-            <button type="submit" class="bg-color-primary text-white py-2 px-4 rounded-lg">Enviar</button>
-            <div id="form-message" class="mt-4 text-center"></div>
+        <h2 class="text-3xl font-bold text-center">Contacto</h2>
+        <form id="contact-form" class="mt-6">
+            <label for="nombre" class="block">Nombre:</label>
+            <input type="text" id="nombre" required class="border rounded p-2 w-full mb-4">
+            <label for="email" class="block">Email:</label>
+            <input type="email" id="email" required class="border rounded p-2 w-full mb-4">
+            <label for="mensaje" class="block">Mensaje:</label>
+            <textarea id="mensaje" required class="border rounded p-2 w-full mb-4"></textarea>
+            <button type="submit" class="btn-primary">Enviar Mensaje</button>
+            <div id="form-message" class="mt-4 text-green-600 hidden"></div>
         </form>
     </section>
-
     <footer class="bg-gray-800 text-white p-4">
         <div class="text-center">
-            <p>&copy; 2023 Thundermans. Todos los derechos reservados.</p>
-            <div class="flex justify-center space-x-4">
-                <a href="#" class="text-white">Facebook</a>
-                <a href="#" class="text-white">Twitter</a>
-                <a href="#" class="text-white">Instagram</a>
-            </div>
-            <a href="#hero" class="text-white mt-4 block">Volver arriba</a>
+            <p>© 2023 Thundermans. Todos los derechos reservados.</p>
+            <a href="#hero" class="text-yellow-400">Volver arriba</a>
         </div>
     </footer>
-
     
 
   <!-- Chatwoot -->
