--- a/thundermans/index.html
+++ b/thundermans/index.html
@@ -2,106 +2,139 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Thundermans: tu tienda de cómics favorita. Encuentra los mejores títulos y productos relacionados con el mundo del cómic.">
+    <meta name="description" content="Thundermans, tu tienda de cómics favorita. Encuentra tus títulos favoritos y más.">
     <link rel="canonical" href="https://thundermans.com">
     <meta property="og:title" content="Thundermans">
     <meta property="og:description" content="Tu tienda de cómics favorita.">
     <meta property="og:image" content="https://unsplash.com/es/fotos/foto-timelapse-de-un-relampago--qWs2GFsyeg">
+    <meta property="og:url" content="https://thundermans.com">
     <title>Thundermans</title>
     
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     
 
   <link rel="stylesheet" href="styles.css" /></head>
-<body class="bg-gray-100">
-    <nav class="sticky top-0 bg-white shadow-md p-4">
-        <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-2xl font-bold text-blue-600">Thundermans</h1>
-            <a href="#contact" class="cta bg-blue-600 text-white px-4 py-2 rounded">Contáctanos</a>
+<body class="bg-white">
+
+    <nav class="sticky top-0 bg-white shadow-lg">
+        <div class="container mx-auto flex justify-between items-center p-4">
+            <h1 class="text-3xl font-bold text-blue-600">Thundermans</h1>
+            <a href="#contact" class="cta bg-blue-600 text-white py-2 px-4 rounded">Contáctanos</a>
         </div>
     </nav>
-    <header class="hero-bg h-96 flex flex-col justify-center items-center text-center text-white">
-        <h2 class="text-5xl font-extrabold">¡Bienvenido a Thundermans!</h2>
-        <p class="mt-4 text-lg">Tu tienda de cómics favorita, donde los héroes cobran vida.</p>
-        <div class="mt-6">
-            <a href="#products" class="cta bg-yellow-500 text-black px-4 py-2 rounded">Explora Productos</a>
-        </div>
+
+    <header class="hero py-20 text-center">
+        <h2 class="text-5xl font-extrabold text-gray-800">¡Bienvenido a Thundermans!</h2>
+        <p class="mt-4 text-lg text-gray-600">Tu tienda de cómics favorita, donde la aventura comienza.</p>
+        <a href="#products" class="cta mt-6 bg-blue-600 text-white py-2 px-4 rounded">Explora nuestros productos</a>
     </header>
-    <section id="products" class="container mx-auto my-12">
-        <h3 class="text-3xl font-bold text-center mb-6">Nuestros Productos</h3>
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-            <div class="bg-white rounded-lg shadow-lg p-4">
-                <img src="https://unsplash.com/es/fotos/comic-de-the-walking-dead-d2Py_uhXJQo" alt="Comic de The Walking Dead" class="rounded mb-4">
-                <h4 class="font-bold">The Walking Dead</h4>
-                <ul class="list-disc pl-5">
-                    <li>Historia emocionante</li>
-                    <li>Personajes inolvidables</li>
-                    <li>Edición limitada</li>
+
+    <section id="products" class="py-16">
+        <h3 class="text-3xl text-center font-bold">Nuestros Productos</h3>
+        <div class="container mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 mt-8">
+            <div class="card bg-white rounded-lg shadow p-4">
+                <h4 class="font-bold text-xl">Cómic 1</h4>
+                <ul class="mt-2">
+                    <li>Descripción breve 1</li>
+                    <li>Descripción breve 2</li>
                 </ul>
-                <a href="#" class="cta bg-blue-600 text-white px-4 py-2 rounded">Ver Más</a>
+                <a href="#" class="cta mt-4 bg-blue-600 text-white py-2 px-4 rounded">Ver más</a>
             </div>
-            <!-- Repeat similar cards for other products -->
+            <div class="card bg-white rounded-lg shadow p-4">
+                <h4 class="font-bold text-xl">Cómic 2</h4>
+                <ul class="mt-2">
+                    <li>Descripción breve 1</li>
+                    <li>Descripción breve 2</li>
+                </ul>
+                <a href="#" class="cta mt-4 bg-blue-600 text-white py-2 px-4 rounded">Ver más</a>
+            </div>
+            <div class="card bg-white rounded-lg shadow p-4">
+                <h4 class="font-bold text-xl">Cómic 3</h4>
+                <ul class="mt-2">
+                    <li>Descripción breve 1</li>
+                    <li>Descripción breve 2</li>
+                </ul>
+                <a href="#" class="cta mt-4 bg-blue-600 text-white py-2 px-4 rounded">Ver más</a>
+            </div>
         </div>
     </section>
-    <section class="bg-gray-200 py-12">
-        <div class="container mx-auto">
-            <h3 class="text-3xl font-bold text-center mb-6">Servicios y Beneficios</h3>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-                <div class="flex items-center bg-white rounded-lg shadow-lg p-4">
-                    <svg class="w-8 h-8 text-blue-600 mr-4" fill="currentColor" viewBox="0 0 20 20"><path d="M10 0a10 10 0 100 20 10 10 0 000-20zm0 18a8 8 0 110-16 8 8 0 010 16z"/></svg>
-                    <div>
-                        <h4 class="font-bold">Variedad de Títulos</h4>
-                        <p>Encuentra cómics de todos los géneros.</p>
-                    </div>
+
+    <section id="services" class="py-16 bg-gray-100">
+        <h3 class="text-3xl text-center font-bold">Beneficios</h3>
+        <div class="container mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 mt-8">
+            <div class="bg-white rounded-lg shadow p-4 flex items-center">
+                <span class="text-4xl mr-4">📚</span>
+                <div>
+                    <h4 class="font-bold">Variedad de Títulos</h4>
+                    <p>Encuentra cómics de todos los géneros.</p>
                 </div>
-                <!-- Repeat similar cards for other services -->
+            </div>
+            <div class="bg-white rounded-lg shadow p-4 flex items-center">
+                <span class="text-4xl mr-4">🚚</span>
+                <div>
+                    <h4 class="font-bold">Envío Rápido</h4>
+                    <p>Recibe tus cómics en la puerta de tu casa.</p>
+                </div>
+            </div>
+            <div class="bg-white rounded-lg shadow p-4 flex items-center">
+                <span class="text-4xl mr-4">💳</span>
+                <div>
+                    <h4 class="font-bold">Pagos Seguros</h4>
+                    <p>Compra con confianza y seguridad.</p>
+                </div>
             </div>
         </div>
     </section>
-    <section class="py-12">
-        <h3 class="text-3xl font-bold text-center mb-6">Clientes Satisfechos</h3>
-        <div class="flex justify-center space-x-4">
-            <img src="https://via.placeholder.com/100" alt="Logo Cliente 1" class="h-16">
-            <img src="https://via.placeholder.com/100" alt="Logo Cliente 2" class="h-16">
-            <img src="https://via.placeholder.com/100" alt="Logo Cliente 3" class="h-16">
+
+    <section id="clients" class="py-16">
+        <h3 class="text-3xl text-center font-bold">Clientes Satisfechos</h3>
+        <div class="container mx-auto flex justify-center mt-8">
+            <span class="text-gray-600">👤 Cliente 1</span>
+            <span class="text-gray-600 mx-4">👤 Cliente 2</span>
+            <span class="text-gray-600">👤 Cliente 3</span>
         </div>
     </section>
-    <section id="contact" class="container mx-auto my-12">
-        <h3 class="text-3xl font-bold text-center mb-6">Contáctanos</h3>
-        <form class="bg-white rounded-lg shadow-lg p-6">
+
+    <section id="contact" class="py-16 bg-gray-100">
+        <h3 class="text-3xl text-center font-bold">Contáctanos</h3>
+        <form class="container mx-auto mt-8">
             <div class="mb-4">
-                <label for="name" class="block text-sm font-medium">Nombre</label>
-                <input type="text" id="name" class="mt-1 block w-full border-gray-300 rounded-md" required>
+                <label for="name" class="block text-gray-700">Nombre:</label>
+                <input type="text" id="name" class="border rounded w-full py-2 px-3" required>
             </div>
             <div class="mb-4">
-                <label for="email" class="block text-sm font-medium">Correo Electrónico</label>
-                <input type="email" id="email" class="mt-1 block w-full border-gray-300 rounded-md" required>
+                <label for="email" class="block text-gray-700">Email:</label>
+                <input type="email" id="email" class="border rounded w-full py-2 px-3" required>
             </div>
             <div class="mb-4">
-                <label for="phone" class="block text-sm font-medium">Teléfono</label>
-                <input type="tel" id="phone" class="mt-1 block w-full border-gray-300 rounded-md" required>
+                <label for="phone" class="block text-gray-700">Teléfono:</label>
+                <input type="tel" id="phone" class="border rounded w-full py-2 px-3">
             </div>
             <div class="mb-4">
-                <label for="location" class="block text-sm font-medium">Ubicación</label>
-                <select id="location" class="mt-1 block w-full border-gray-300 rounded-md">
+                <label for="location" class="block text-gray-700">Ubicación:</label>
+                <select id="location" class="border rounded w-full py-2 px-3">
                     <option value="local">Local</option>
                     <option value="nacional">Nacional</option>
                 </select>
             </div>
-            <button type="submit" class="cta bg-blue-600 text-white px-4 py-2 rounded w-full">Enviar</button>
+            <button type="submit" class="cta bg-blue-600 text-white py-2 px-4 rounded w-full">Enviar</button>
         </form>
     </section>
-    <section class="py-12">
-        <h3 class="text-3xl font-bold text-center mb-6">Preguntas Frecuentes</h3>
-        <details class="mb-4">
-            <summary class="font-semibold">¿Qué tipos de cómics ofrecen?</summary>
-            <p>Ofrecemos cómics de diversos géneros, desde superhéroes hasta manga.</p>
-        </details>
-        <details class="mb-4">
-            <summary class="font-semibold">¿Hacen envíos?</summary>
-            <p>Sí, realizamos envíos a nivel nacional.</p>
-        </details>
+
+    <section class="py-16">
+        <h3 class="text-3xl text-center font-bold">Preguntas Frecuentes</h3>
+        <div class="container mx-auto mt-8">
+            <details class="mb-4">
+                <summary class="cursor-pointer">¿Hacen envíos internacionales?</summary>
+                <p class="mt-2">Sí, ofrecemos envíos a varios países.</p>
+            </details>
+            <details class="mb-4">
+                <summary class="cursor-pointer">¿Cuáles son los métodos de pago?</summary>
+                <p class="mt-2">Aceptamos tarjetas de crédito, débito y PayPal.</p>
+            </details>
+        </div>
     </section>
+
     <footer class="bg-gray-800 text-white py-8">
         <div class="container mx-auto grid grid-cols-1 md:grid-cols-4 gap-6">
             <div>
@@ -111,8 +144,8 @@
             <div>
                 <h4 class="font-bold">Información</h4>
                 <ul>
-                    <li><a href="#" class="text-gray-400">Sobre Nosotros</a></li>
-                    <li><a href="#" class="text-gray-400">Política de Privacidad</a></li>
+                    <li><a href="#" class="text-gray-400">Sobre nosotros</a></li>
+                    <li><a href="#" class="text-gray-400">Política de privacidad</a></li>
                 </ul>
             </div>
             <div>
@@ -124,11 +157,11 @@
             </div>
             <div>
                 <h4 class="font-bold">Redes Sociales</h4>
-                <a href="#" class="text-gray-400">Facebook</a>
-                <a href="#" class="text-gray-400">Twitter</a>
+                <a href="#" class="text-gray-400">🔗 Facebook</a>
             </div>
         </div>
     </footer>
+
 
   <!-- Chatwoot -->
   
